samples/_failures_safe/1761088650_37ec85_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cbe7c5e9.c: In function ‘fill_matrix’:
./samples/SAFE/__tmp_cbe7c5e9.c:157:29: error: expected ‘;’ at end of input
  157 |         for (size_t j = 0; j
      |                             ^
      |                             ;
./samples/SAFE/__tmp_cbe7c5e9.c:157:9: error: expected declaration or statement at end of input
  157 |         for (size_t j = 0; j
      |         ^~~
./samples/SAFE/__tmp_cbe7c5e9.c:157:9: error: expected declaration or statement at end of input
